added function to plot oneshot task, improved loader class

--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -25,18 +25,16 @@
     "import dill as pickle\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "\n",
     "def W_init(shape,name=None):\n",
     "    \"\"\"Initialize weights as in paper\"\"\"\n",
     "    values = rng.normal(loc=0,scale=1e-2,size=shape)\n",
     "    return K.variable(values,name=name)\n",
-    "\n",
+    "#//TODO: figure out how to initialize layer biases in keras.\n",
     "\n",
     "input_shape = (105, 105, 1)\n",
     "left_input = Input(input_shape)\n",
     "right_input = Input(input_shape)\n",
-    "#build convolutional network to use in each siamese 'leg'\n",
+    "#build convnet to use in each siamese 'leg'\n",
     "convnet = Sequential()\n",
     "convnet.add(Convolution2D(64,10,10,activation='relu',input_shape=input_shape,init=W_init))\n",
     "convnet.add(MaxPooling2D())\n",
@@ -50,18 +48,19 @@
     "#encode each of the two inputs into a vector with the convnet\n",
     "encoded_l = convnet(left_input)\n",
     "encoded_r = convnet(right_input)\n",
-    "#compute the l1 distance between the two encoded digits\n",
+    "#merge two encoded inputs with the l1 distance between them\n",
     "L1_distance = lambda x: K.abs(x[0]-x[1])\n",
     "both = merge([encoded_l,encoded_r], mode = L1_distance, output_shape=lambda x: x[0])\n",
     "prediction = Dense(1,activation='sigmoid')(both)\n",
     "siamese_net = Model(input=[left_input,right_input],output=prediction)\n",
     "optimizer = SGD(0.009,momentum=0.6,nesterov=True,decay=0.0003)\n",
+    "#//TODO: get layerwise learning rates and momentum annealing scheme described in paperworking\n",
     "siamese_net.compile(loss=\"binary_crossentropy\",optimizer=optimizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -88,40 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating 5 way task 3 times...\n",
-      "[[ 0.48157385]\n",
-      " [ 0.50549209]\n",
-      " [ 0.50719666]\n",
-      " [ 0.4888424 ]\n",
-      " [ 0.50703931]]\n",
-      "2\n",
-      "[[ 0.52736533]\n",
-      " [ 0.52286547]\n",
-      " [ 0.49043316]\n",
-      " [ 0.51916617]\n",
-      " [ 0.51127368]]\n",
-      "0\n",
-      "[[ 0.4806416 ]\n",
-      " [ 0.49986258]\n",
-      " [ 0.48568013]\n",
-      " [ 0.48592973]\n",
-      " [ 0.48212302]]\n",
-      "1\n",
-      "Got 33.3333333333% 5 way one-shot learning accuracy\n",
-      "33.3333333333\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Siamese_Loader:\n",
     "    \"\"\"For loading batches and testing tasks to a siamese net\"\"\"\n",
@@ -134,7 +105,7 @@
     "    def get_batch(self,n):\n",
     "        \"\"\"Create batch of pairs, half same class, half different class\"\"\"\n",
     "        categories = rng.choice(self.n_classes,size=(n,),replace=False)\n",
-    "        pairs=[np.zeros((n, self.h, self.w,1)),np.zeros((n, self.h, self.w,1))]\n",
+    "        pairs=[np.zeros((n, self.h, self.w,1)) for i in range(2)]\n",
     "        targets=np.zeros((n,))\n",
     "        targets[n//2:] = 1\n",
     "        for i in range(n):\n",
@@ -163,7 +134,7 @@
     "        return pairs, targets\n",
     "    \n",
     "    def test_oneshot(self,model,N,k,verbose=0):\n",
-    "        \"\"\"Test average N way oneshot learning accuracy of a siamese neural net over n one-shot tasks\"\"\"\n",
+    "        \"\"\"Test average N way oneshot learning accuracy of a siamese neural net over k one-shot tasks\"\"\"\n",
     "        pass\n",
     "        n_correct = 0\n",
     "        if verbose:\n",
@@ -171,18 +142,13 @@
     "        for i in range(k):\n",
     "            inputs, targets = self.make_oneshot_task(N)\n",
     "            probs = model.predict(inputs)\n",
-    "            print(probs)\n",
-    "            print(np.argmax(probs))\n",
     "            if np.argmax(probs) == 0:\n",
     "                n_correct+=1\n",
     "        percent_correct = (100.0*n_correct / k)\n",
     "        if verbose:\n",
     "            print(\"Got {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
     "        return percent_correct\n",
-    "    \n",
-    "loader = Siamese_Loader(X,Xval)\n",
-    "b=loader.test_oneshot(siamese_net,N=5,k=3,verbose=True)\n",
-    "print(b)  "
+    "    \n"
    ]
   },
   {
@@ -191,25 +157,52 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKAAAAFKCAYAAACaZ1R9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAADL1JREFUeJzt3TuS2zgUheGrqQmcewNOlbYX4T14enk9swcvwrFSb8C5\nM07QoykWzQcI3IsDgP9XpaBbD1Li0QXAB3SbpskAlT/UK4BrI4CQIoCQIoCQIoCQIoCQIoCQIoCQ\n+jPlQbfb7aOZfTGzH2b2K3KFMIwPZvbJzL5N0/Rz60FJAbT38P3tsFK4nr/M7J+tO1MD+MPM7O3t\nze73u8M6YXSPx8NeX1/N/svOltQA/jIzu9/v9vLyUrZmuJrdLhuDEEgRQEgRQEgRQEgRQEgRQEgR\nQEgRQEgRQEgRQEgRQEilHgvu1u1227yPa6L1hg9gbcvAE/J9NMGQogIW2mvi5/dTCdddugIehSf6\n+aACnkbofF26AkJv+AB69r1yqt80TfT/dgwfwCOpocoNH/bRB7T9keqZ4BG48y5fAaF1iQCm9sOW\n1Y7qF+9STfA0Tck7jlHHpQIYgcpX5hJNMNp1uQB6VSz27/m4ZBP8DA779vQuGcCnlEHJUskghfD+\n7nJNMNpy+QDWrEq32+3/G95dOoDKMBDCd5cOIPQuMQhptdpwuv4FKmCr4cO7IStgZOjOVKsz5xpe\ntQoOXwHRtiEqYETF86hI89egK7BuiACWuGrT14pLBlARupzDfldAHxBSlwtgq03uVavj8E1wq4HD\nuyECSMj6dbkmGG0hgBVRqX9HACFFACFFACFFACu66r6+PQQQUgQQUgQQUgSwkqP+31X3EQ5xKK5l\nDDz2UQEhRQADUf2OEcAGXLX/Z0YfMExK9bty8J6ogJCiAjpiVv3zqIBOGHDkoQLuaPWC95FQASFF\nBZyJbkapfr+7ZAAV/TXCt+5SAawdPEJ3jD4gpIavgKrdI1S/NEMH0Dt8hMrfkAGMqnr8SpI/+oCQ\nGiqALf8KUavrpTZEAFsO3lwP61hb131ANmj/hqiA6BcBhFTXTXAqxS4Qugdphg4g+97aRxMMqSEr\nIJWvH10HkKD1jyYYUgSwsl6O2tRCACFFACFFACFFAIMwQk9DACFFACFFACFFACFFAIOwszlN18eC\nW0TwzqECQooK6IiJyc8jgIWYF7oMTXAB+nvlCCCkCGAmqp8P+oAn5QaP/t86AhiI0B2jCYYUFXBH\nTnNL1TuniQCO0qEnfOfRBENKVgFHqXpPVL88kgCOFD6CV4YmuADhK0cAIdXEKLgHVLsYTQaQjX0d\nTQZwbZBCKMdEHxBSkgDmVDOmNRtTk03wnnkIaZb7JwvgMzwlVW35XALZH/qAkJI3wdM0ufXtUl+H\nStkOeQDN1gMROeDYe23CWVcTAVwzD0LN0e/WsghmDPqAkOoigNM0/X9TYR9kjGab4C3LENZunmmK\nfXUXwKUzgaCKtaeLJhjj6r4CnrFVLamMOlRAM/kA58oIIKQIIKQIIKQI4Az9wPoIIKQI4AlUSH+X\n2g+YgpDVRQWEFAGEVGoT/MHM7PF4BK4KRjLLyofdB87Ptdu6mdlXM5u4ccu4fd3L1i2l03273T6a\n2Rcz+2Fmvw6fALxXvk9m9m2app9bD0oKIBCFQQikCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCk\nCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkkuaGYWYEZEiaGSF1cqIv\nZva3w0rhev4ys3+27kwN4A8zs7e3N7vf77sP/Pz5s5mZff/+ffP+rfswjsfjYa+vr2b/ZWdLagB/\nmZnd73d7eXlJesLa456/SJT6GhjCbpfNfRDynOxo+fNXz7+ZDAlzIaPgeQift5GN/v4iuU5SnrIh\n+M1dzIXNks8vU8Ya5YscEsARPpg1e1+evfs8Pw/lFziiH+8aQGXwUjdMrXX0Ws5yoy/711HLOXt/\nrq5/qCYldPMPrLR67G2c6GAvlzFNk2sI914vsup2F8Dlh7EVsBqBWPu7ZivwDI23rc84YlkhAazR\nTzm7oT3X6agv6BnCqCZ3b1k1uQdwWQlGHfUuK29UNVoa7fMM2Q+47KssHxP5Td4Lgscyj0a7XgGJ\nfA8tCTsUN7Kj91gawrXnz361aijD7IZ5em68tY24tWE9ljd/vdIq38LnWEvXZ0TPjzWr+0ZrI3D1\nOnmKei9d7IbZq2aqajFSuPZE79rqIoCtNElrzft84LF11KJXNb7k1c+GMet3w+yt91oQRxC9rdwC\nWPMoRKtGe9813k+VIyGjbRj4qTIKHqlJgi+3CrhX5UYPIBU+X5UKyAbClq53RKN/BBBSBBBSBHBQ\nvQz8CCCkCCCkqh0L3rrSil001+ZWAZfHgpdn8PbSJ0Fdrk3w2mnj8/+NfMJCS1+wltblSLU+4PLy\nwt70ts69fMGrDkJGbZJbei8trUuK6mdEe18vUWtSIJWcU9vOvG/1qXOuFfBMqDyv0d26ZLEk5C1c\n8HT0/rYen+OoMER9Fq6nY81XsPYsVPPlzmcqyL08cm2DHH34R/fnVKaz617yXlNmxvKeWMB9FKy0\nNgL3eM35Blq7LR9XKid8UVV6b3o4D+FTc7QgaiqQlAvdczZUKxe019ie7juiWwufp7Xm+KgirO2U\n916XSGvr7fleZE1w67sLjqZgM9uetTRyfdaWETEXTa3tI70wvfWqcGZGhq0QRrQIa4MBz+XUbM26\nmBlhy3IauKNw5L52jeedfW2vqeCWYU4Jn+cX3SWAZ1coqrxH91da5B3C599Ry1qqclmmx+PxO88J\nMVOPsHjvUQg7FtzrSQctaulz9C4cIecDpvwf6Y524/TcmrgEsOcPoHe9f/bhJyPU7NCiP24B7P2E\nU2hIJin3HL2hb7LLMnvvu8AH1wVDigBCigBCigBCigBCigDCzHT7b7s+H3BEuSezlpylcnRG9NF1\nLiW71LoPYNQFRwqlp9rnfBapJ6DOj3QtZ7go2QZDNMGjHf7zuo7ZYz2OplMp/fJ3XQGXF0wrl+9l\nedr9mfXw9qxskZ9v9xVQNeHRmRkTzr5uzutFXUh01N8rfe/dB3AkEdcPpyzzaF3mldBbdgDV/S7l\nrE6t9Tc9wnF0Yf3ecy4/Ct77+8lz3patiYui+oLRSiaWKl1PaRPcWiU5aznthno6txJn+9LNTE6k\n+rDXvnlr+6i2Hlvi7L6zXsxHu2vvMaLbkx3AyH5BjtqT9WxVul7P9l478rH3Hr249wEVG0AV+mVf\nMGKelpqOWo+96phrmN0wio3eY6VbszeQW/Zrvfe7DjcKnqsRSlX19bY3odPRdHRN7oY5+nZ4bDDl\nxm8tcNHVeGvip9IQhgSQylMuZ6P2+Fl02wT3+GFHiah+tb7gwwxCRpJzBkrkUZjIEBLAxh2F0Kv6\nre1kPjPTRa5um+ArWDvmvPe/kuXkDCY8wk8F7MDa8ebl/z2W8Xz9FF59RCpgR6IHBMuzYpbLbOpY\nMMa0rITdHQvGGGrt5qIPCCkCCCkCCCkCCCkCCCkCCCl2w3REdXLCc9kRu2YIYINyTubt9fIAAtiR\nlArU23mSkgB6H1NUT9PhvbzcChfxvvcmYer6WLDXfHbLszI8LpTJWe6o5ifGbs2MVfIZVB8FR/RV\ncubUK7F22eJI5pdiplx1WPL+JRUwcg672pWvpfB5VP6tk1/3pnGbP+/s8tkPeEIr046kVqhcaye6\npo7Mz66PSwWMPmdsT62pQFrq821tbPW65WyLogCmnjkbbW1WJ0/qma62NmzNbkDK+89Zj+IKqP7W\n1agCua/pXTWjvwgeQT67fkPsiE7pr6j7bTnPP3NZZNTup+jq6jJB5d4UXlvP2XuNnHVYUlVmzxH5\nmQra67yERQFce9OqOfpa4NnkrvVrj17X40tc+/Psvg/YiogN2MJny9wwjat9FKZlOe9/iEEIyqm+\nPATQwdUrXwmaYEgRQEgRQEgRQEgRQEgxCp7p8VBW76iAkCKAkCoK4IgX5KCuogC2eGEO+kITDKni\nAPZSBekutMmlArYewq3fv211fa/EbT9g7csjl8te3rd2wTSBa497HzByIy9/IWjt14NS1sPzF4ZQ\nxvVISMpUDl7LOLpv7RR5QteesFGwdyWcX6Cz1tSONGnjlYQEsMag5OxrM+hoU0gfcGvOvhI0pWNy\nDeDWz4h6VcSSSXmWXwaqYRvcArjW6d/bLZJrOQI+euyZv1Gf6/RsKVfurzXROcvKRejaEjI92x6P\nSkiIxiGbmsN7MiLvZaCO4smJalNOhAl/XV8TQoXrH+cDQooAQio0gDSROEIFhBQBhBQBhFTqbpgP\nZmaPxyNwVTCoD7v3zg/ub93M7KuZTdy4Zdy+7mXrlvgTTB/N7IuZ/TCzX4dPAN4r3ycz+zZN08+t\nByUFEIjCIARSBBBSBBBSBBBSBBBSBBBSBBBS/wJegtwe+zXC/wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fa5543494d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "loader = Siamese_Loader(X,Xval)\n",
+    "\n",
+    "def concat_images(X):\n",
+    "    \"\"\"Concatenates a bnch of images into a big matrix for plotting purposes.\"\"\"\n",
+    "    nc,h,w,_ = X.shape\n",
+    "    X = X.reshape(nc,h,w)\n",
+    "    n = np.ceil(np.sqrt(nc)).astype(\"int8\")\n",
+    "    img = np.zeros((n*w,n*h))\n",
+    "    x = 0\n",
+    "    y = 0\n",
+    "    for example in range(nc):\n",
+    "        img[x*w:(x+1)*w,y*h:(y+1)*h] = X[example]\n",
+    "        y += 1\n",
+    "        if y >= n:\n",
+    "            y = 0\n",
+    "            x += 1\n",
+    "    return img\n",
     "\n",
     "\n",
-    "for i in range(20000):\n",
-    "    (inputs,targets)=get_batch(X,y,64)\n",
-    "    loss=siamese_net.train_on_batch(inputs,targets)\n",
-    "    if i % 170 == 0:\n",
-    "        val_input,val_target=get_batch(Xval,yval,32)\n",
-    "        val_loss=siamese_net.evaluate(val_input,val_target)\n",
-    "        print(\"iteration: {}, training loss: {}, val loss: {}\".format(i,loss, val_loss))\n",
+    "def plot_oneshot_task(pairs):\n",
+    "    \"\"\"Takes a one-shot task given to a siamese net and  \"\"\"\n",
+    "    fig,(ax1,ax2) = plt.subplots(2)\n",
+    "    ax1.matshow(pairs[0][0].reshape(105,105),cmap='gray')\n",
+    "    img = concat_images(pairs[1])\n",
+    "    ax1.get_yaxis().set_visible(False)\n",
+    "    ax1.get_xaxis().set_visible(False)\n",
+    "    ax2.matshow(img,cmap='gray')\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.show()\n",
     "    \n",
-    "\n",
-    "(inputs,targets)=get_batch(Xval,yval,64)\n",
-    "\n",
-    "\n",
-    "\n",
-    "plt.matshow(np.hstack([siamese_net.predict(inputs), targets.reshape(64,1)])[16:48],cmap='gray')\n",
-    "plt.show()\n"
+    "pairs, targets = loader.make_oneshot_task(22)\n",
+    "plot_oneshot_task(pairs)"
    ]
   },
   {
@@ -221,16 +214,19 @@
    },
    "outputs": [],
    "source": [
-    "preds=siamese_net.predict(inputs)\n",
-    "#print(np.where(preds==preds.max()))\n",
-    "#print(inputs[0][58].shape)\n",
-    "for idx in range(3):\n",
-    "    print(\"probability not same:{}\".format(preds[idx]))\n",
-    "    plt.matshow(inputs[0][idx].reshape(105,105),cmap='gray')\n",
-    "    plt.matshow(inputs[1][idx].reshape(105,105),cmap='gray')\n",
+    "evaluate_every = 170\n",
+    "batch_size = 60\n",
+    "N_way = 20\n",
+    "n_val = 40\n",
+    "for i in range(20000):\n",
+    "    (inputs,targets)=loader.get_batch(batch_size)\n",
+    "    loss=siamese_net.train_on_batch(inputs,targets)\n",
+    "    if i % evaluate_every == 0:\n",
+    "        val_acc = loader.test_oneshot(siamese_net,N_way,n_val,verbose=False)\n",
+    "        print(\"iteration {}, training loss: {}, validation  one-shot learning accuracy: {}\".format(i,loss,val_acc))\n",
     "\n",
-    "    plt.show()\n",
-    "#plt.matshow(inputs[1][58])\n"
+    "        \n",
+    "siamese_net.save(path='/home/soren/keras-oneshot/weights')"
    ]
   },
   {
@@ -244,6 +240,15 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
