--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -153,20 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKAAAAFKCAYAAACaZ1R9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAADL1JREFUeJzt3TuS2zgUheGrqQmcewNOlbYX4T14enk9swcvwrFSb8C5\nM07QoykWzQcI3IsDgP9XpaBbD1Li0QXAB3SbpskAlT/UK4BrI4CQIoCQIoCQIoCQIoCQIoCQIoCQ\n+jPlQbfb7aOZfTGzH2b2K3KFMIwPZvbJzL5N0/Rz60FJAbT38P3tsFK4nr/M7J+tO1MD+MPM7O3t\nze73u8M6YXSPx8NeX1/N/svOltQA/jIzu9/v9vLyUrZmuJrdLhuDEEgRQEgRQEgRQEgRQEgRQEgR\nQEgRQEgRQEgRQEgRQEilHgvu1u1227yPa6L1hg9gbcvAE/J9NMGQogIW2mvi5/dTCdddugIehSf6\n+aACnkbofF26AkJv+AB69r1yqt80TfT/dgwfwCOpocoNH/bRB7T9keqZ4BG48y5fAaF1iQCm9sOW\n1Y7qF+9STfA0Tck7jlHHpQIYgcpX5hJNMNp1uQB6VSz27/m4ZBP8DA779vQuGcCnlEHJUskghfD+\n7nJNMNpy+QDWrEq32+3/G95dOoDKMBDCd5cOIPQuMQhptdpwuv4FKmCr4cO7IStgZOjOVKsz5xpe\ntQoOXwHRtiEqYETF86hI89egK7BuiACWuGrT14pLBlARupzDfldAHxBSlwtgq03uVavj8E1wq4HD\nuyECSMj6dbkmGG0hgBVRqX9HACFFACFFACFFACu66r6+PQQQUgQQUgQQUgSwkqP+31X3EQ5xKK5l\nDDz2UQEhRQADUf2OEcAGXLX/Z0YfMExK9bty8J6ogJCiAjpiVv3zqIBOGHDkoQLuaPWC95FQASFF\nBZyJbkapfr+7ZAAV/TXCt+5SAawdPEJ3jD4gpIavgKrdI1S/NEMH0Dt8hMrfkAGMqnr8SpI/+oCQ\nGiqALf8KUavrpTZEAFsO3lwP61hb131ANmj/hqiA6BcBhFTXTXAqxS4Qugdphg4g+97aRxMMqSEr\nIJWvH10HkKD1jyYYUgSwsl6O2tRCACFFACFFACFFAIMwQk9DACFFACFFACFFACFFAIOwszlN18eC\nW0TwzqECQooK6IiJyc8jgIWYF7oMTXAB+nvlCCCkCGAmqp8P+oAn5QaP/t86AhiI0B2jCYYUFXBH\nTnNL1TuniQCO0qEnfOfRBENKVgFHqXpPVL88kgCOFD6CV4YmuADhK0cAIdXEKLgHVLsYTQaQjX0d\nTQZwbZBCKMdEHxBSkgDmVDOmNRtTk03wnnkIaZb7JwvgMzwlVW35XALZH/qAkJI3wdM0ufXtUl+H\nStkOeQDN1gMROeDYe23CWVcTAVwzD0LN0e/WsghmDPqAkOoigNM0/X9TYR9kjGab4C3LENZunmmK\nfXUXwKUzgaCKtaeLJhjj6r4CnrFVLamMOlRAM/kA58oIIKQIIKQIIKQI4Az9wPoIIKQI4AlUSH+X\n2g+YgpDVRQWEFAGEVGoT/MHM7PF4BK4KRjLLyofdB87Ptdu6mdlXM5u4ccu4fd3L1i2l03273T6a\n2Rcz+2Fmvw6fALxXvk9m9m2app9bD0oKIBCFQQikCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCk\nCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkCCCkkuaGYWYEZEiaGSF1cqIv\nZva3w0rhev4ys3+27kwN4A8zs7e3N7vf77sP/Pz5s5mZff/+ffP+rfswjsfjYa+vr2b/ZWdLagB/\nmZnd73d7eXlJesLa456/SJT6GhjCbpfNfRDynOxo+fNXz7+ZDAlzIaPgeQift5GN/v4iuU5SnrIh\n+M1dzIXNks8vU8Ya5YscEsARPpg1e1+evfs8Pw/lFziiH+8aQGXwUjdMrXX0Ws5yoy/711HLOXt/\nrq5/qCYldPMPrLR67G2c6GAvlzFNk2sI914vsup2F8Dlh7EVsBqBWPu7ZivwDI23rc84YlkhAazR\nTzm7oT3X6agv6BnCqCZ3b1k1uQdwWQlGHfUuK29UNVoa7fMM2Q+47KssHxP5Td4Lgscyj0a7XgGJ\nfA8tCTsUN7Kj91gawrXnz361aijD7IZ5em68tY24tWE9ljd/vdIq38LnWEvXZ0TPjzWr+0ZrI3D1\nOnmKei9d7IbZq2aqajFSuPZE79rqIoCtNElrzft84LF11KJXNb7k1c+GMet3w+yt91oQRxC9rdwC\nWPMoRKtGe9813k+VIyGjbRj4qTIKHqlJgi+3CrhX5UYPIBU+X5UKyAbClq53RKN/BBBSBBBSBHBQ\nvQz8CCCkCCCkqh0L3rrSil001+ZWAZfHgpdn8PbSJ0Fdrk3w2mnj8/+NfMJCS1+wltblSLU+4PLy\nwt70ts69fMGrDkJGbZJbei8trUuK6mdEe18vUWtSIJWcU9vOvG/1qXOuFfBMqDyv0d26ZLEk5C1c\n8HT0/rYen+OoMER9Fq6nY81XsPYsVPPlzmcqyL08cm2DHH34R/fnVKaz617yXlNmxvKeWMB9FKy0\nNgL3eM35Blq7LR9XKid8UVV6b3o4D+FTc7QgaiqQlAvdczZUKxe019ie7juiWwufp7Xm+KgirO2U\n916XSGvr7fleZE1w67sLjqZgM9uetTRyfdaWETEXTa3tI70wvfWqcGZGhq0QRrQIa4MBz+XUbM26\nmBlhy3IauKNw5L52jeedfW2vqeCWYU4Jn+cX3SWAZ1coqrxH91da5B3C599Ry1qqclmmx+PxO88J\nMVOPsHjvUQg7FtzrSQctaulz9C4cIecDpvwf6Y524/TcmrgEsOcPoHe9f/bhJyPU7NCiP24B7P2E\nU2hIJin3HL2hb7LLMnvvu8AH1wVDigBCigBCigBCigBCigDCzHT7b7s+H3BEuSezlpylcnRG9NF1\nLiW71LoPYNQFRwqlp9rnfBapJ6DOj3QtZ7go2QZDNMGjHf7zuo7ZYz2OplMp/fJ3XQGXF0wrl+9l\nedr9mfXw9qxskZ9v9xVQNeHRmRkTzr5uzutFXUh01N8rfe/dB3AkEdcPpyzzaF3mldBbdgDV/S7l\nrE6t9Tc9wnF0Yf3ecy4/Ct77+8lz3patiYui+oLRSiaWKl1PaRPcWiU5aznthno6txJn+9LNTE6k\n+rDXvnlr+6i2Hlvi7L6zXsxHu2vvMaLbkx3AyH5BjtqT9WxVul7P9l478rH3Hr249wEVG0AV+mVf\nMGKelpqOWo+96phrmN0wio3eY6VbszeQW/Zrvfe7DjcKnqsRSlX19bY3odPRdHRN7oY5+nZ4bDDl\nxm8tcNHVeGvip9IQhgSQylMuZ6P2+Fl02wT3+GFHiah+tb7gwwxCRpJzBkrkUZjIEBLAxh2F0Kv6\nre1kPjPTRa5um+ArWDvmvPe/kuXkDCY8wk8F7MDa8ebl/z2W8Xz9FF59RCpgR6IHBMuzYpbLbOpY\nMMa0rITdHQvGGGrt5qIPCCkCCCkCCCkCCCkCCCkCCCl2w3REdXLCc9kRu2YIYINyTubt9fIAAtiR\nlArU23mSkgB6H1NUT9PhvbzcChfxvvcmYer6WLDXfHbLszI8LpTJWe6o5ifGbs2MVfIZVB8FR/RV\ncubUK7F22eJI5pdiplx1WPL+JRUwcg672pWvpfB5VP6tk1/3pnGbP+/s8tkPeEIr046kVqhcaye6\npo7Mz66PSwWMPmdsT62pQFrq821tbPW65WyLogCmnjkbbW1WJ0/qma62NmzNbkDK+89Zj+IKqP7W\n1agCua/pXTWjvwgeQT67fkPsiE7pr6j7bTnPP3NZZNTup+jq6jJB5d4UXlvP2XuNnHVYUlVmzxH5\nmQra67yERQFce9OqOfpa4NnkrvVrj17X40tc+/Psvg/YiogN2MJny9wwjat9FKZlOe9/iEEIyqm+\nPATQwdUrXwmaYEgRQEgRQEgRQEgRQEgxCp7p8VBW76iAkCKAkCoK4IgX5KCuogC2eGEO+kITDKni\nAPZSBekutMmlArYewq3fv211fa/EbT9g7csjl8te3rd2wTSBa497HzByIy9/IWjt14NS1sPzF4ZQ\nxvVISMpUDl7LOLpv7RR5QteesFGwdyWcX6Cz1tSONGnjlYQEsMag5OxrM+hoU0gfcGvOvhI0pWNy\nDeDWz4h6VcSSSXmWXwaqYRvcArjW6d/bLZJrOQI+euyZv1Gf6/RsKVfurzXROcvKRejaEjI92x6P\nSkiIxiGbmsN7MiLvZaCO4smJalNOhAl/XV8TQoXrH+cDQooAQio0gDSROEIFhBQBhBQBhFTqbpgP\nZmaPxyNwVTCoD7v3zg/ub93M7KuZTdy4Zdy+7mXrlvgTTB/N7IuZ/TCzX4dPAN4r3ycz+zZN08+t\nByUFEIjCIARSBBBSBBBSBBBSBBBSBBBSBBBS/wJegtwe+zXC/wAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fa5543494d0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'Siamese_Loader' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1f2e7f96b94f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSiamese_Loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mXval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconcat_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"\"\"Concatenates a bnch of images into a big matrix for plotting purposes.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Siamese_Loader' is not defined"
+     ]
     }
    ],
    "source": [
@@ -201,7 +202,7 @@
     "    plt.yticks([])\n",
     "    plt.show()\n",
     "    \n",
-    "pairs, targets = loader.make_oneshot_task(22)\n",
+    "pairs, targets = loader.make_oneshot_task(100)\n",
     "plot_oneshot_task(pairs)"
    ]
   },
