--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -53,7 +53,7 @@
     "both = merge([encoded_l,encoded_r], mode = L1_distance, output_shape=lambda x: x[0])\n",
     "prediction = Dense(1,activation='sigmoid')(both)\n",
     "siamese_net = Model(input=[left_input,right_input],output=prediction)\n",
-    "optimizer = SGD(0.009,momentum=0.6,nesterov=True,decay=0.0003)\n",
+    "optimizer = SGD(0.001,momentum=0.5,nesterov=True,decay=0.0003)\n",
     "#//TODO: get layerwise learning rates and momentum annealing scheme described in paperworking\n",
     "siamese_net.compile(loss=\"binary_crossentropy\",optimizer=optimizer)"
    ]
@@ -81,8 +81,7 @@
     "    (Xval,yval,cval) = pickle.load(f)\n",
     "print(X.shape)\n",
     "a=siamese_net.predict([X[1,1,:,:].reshape(1,105,105,1),X[7,1,:,:].reshape(1,105,105,1) ])\n",
-    "b=siamese_net.predict([X[7,1,:,:].reshape(1,105,105,1),X[1,1,:,:].reshape(1,105,105,1) ])\n",
-    "\n"
+    "b=siamese_net.predict([X[7,1,:,:].reshape(1,105,105,1),X[1,1,:,:].reshape(1,105,105,1) ])\n"
    ]
   },
   {
@@ -97,13 +96,16 @@
     "class Siamese_Loader:\n",
     "    \"\"\"For loading batches and testing tasks to a siamese net\"\"\"\n",
     "    def __init__(self,Xtrain,Xval):\n",
-    "        self.Xval = Xval\n",
-    "        self.Xtrain = Xtrain\n",
+    "        \n",
+    "        self.Xval = Xval# / Xval.max()\n",
+    "        self.Xtrain = Xtrain# / Xtrain.max()\n",
+    "\n",
+    "\n",
     "        self.n_classes,self.n_examples,self.w,self.h = Xtrain.shape\n",
     "        self.n_val,self.n_ex_val,_,_ = Xval.shape\n",
     "\n",
     "    def get_batch(self,n):\n",
-    "        \"\"\"Create batch of pairs, half same class, half different class\"\"\"\n",
+    "        \"\"\"Create batch of n pairs, half same class, half different class\"\"\"\n",
     "        categories = rng.choice(self.n_classes,size=(n,),replace=False)\n",
     "        pairs=[np.zeros((n, self.h, self.w,1)) for i in range(2)]\n",
     "        targets=np.zeros((n,))\n",
@@ -138,7 +140,7 @@
     "        pass\n",
     "        n_correct = 0\n",
     "        if verbose:\n",
-    "            print(\"Evaluating {} way task {} times...\".format(N,k))\n",
+    "            print(\"Evaluating model on {} unique {} way one-shot learning tasks ...\".format(k,N))\n",
     "        for i in range(k):\n",
     "            inputs, targets = self.make_oneshot_task(N)\n",
     "            probs = model.predict(inputs)\n",
@@ -146,28 +148,27 @@
     "                n_correct+=1\n",
     "        percent_correct = (100.0*n_correct / k)\n",
     "        if verbose:\n",
-    "            print(\"Got {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
+    "            print(\"Got an average of {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
     "        return percent_correct\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Siamese_Loader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1f2e7f96b94f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSiamese_Loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mXval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconcat_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"\"\"Concatenates a bnch of images into a big matrix for plotting purposes.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Siamese_Loader' is not defined"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKAAAAFKCAYAAACaZ1R9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAADKFJREFUeJztnT2S3DgSRpMbY8jXBeSW2zqE7qDp4/XMHXQI2eX2BeTL\n4xgaarlc/oBEAh8SfC+iIqSuH4DkYwIggeQwjqMBqPiPugJwbxAQpCAgSEFAkIKAIAUBQQoCghQE\nBCl/pHxoGIaPZvbFzN7N7GfJCkE3fDCzT2b2bRzHH1sfShLQfsn3l0Ol4H78aWZ/b72ZKuC7mdnb\n25s9Hg+HOkHvPJ9Pe319NfvXnS1SBfxpZvZ4POzl5SWvZnA3drtsDEJACgKCFAQEKQgIUhAQpCAg\nSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQpCAhSEBCkICBIQUCQgoAg\nBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQUpqhtRqDMNw+bs9Pflzbz/0tJ3NCJgj3tZv9HSg\neqWJJthDvpq/q6an7WpCQLgv3Qs4DMPvV0/0sj1yAWvuyN5E7GF7mhmEbJEykDh7ECIMVuZ1Otq+\nYRia3IYU5BEQ7k2zEfDMGX0mWqwxfWccx9PfrxF5rtQrCt1FwHEcf7/OclXeGnIcbU9UQbsTcM5V\nEa9QS8Kofb0tuhYQ2ucWAtaKHOpmMOJlmWYHISVYShjtYE30NCi5lYBX2IqcWwLMR9QqIl0XvEUT\nDO2CgAds9avUl0VSyo/QTDcrYJQduEf0+tdALmCUvsoa6rqnjO5bPwnkAsK9QcBMjqJQja6EOhLn\n0LyArTchkEfzAkLfIKAT0QcDKpoQUHXwUvpOPc5AaYkmBFTieUEXUc9zewFBSzMCKi9n0MzqaEbA\niVY78yVSh0CDAirxiIJE03MgIEhpUsBWpxrRhPrTpIBmupkeLdzbvRPNCphK5EEJdCAgxKZ5AVUj\nyhJJkeD/aV5AM92ghMsp5QkhYCqqkTGR8DpdCQjxCCNg6h0G72ikKvcuhBFwovVBCU3yOcIJaJZ+\nsbhENGyRyMKHFBD6IbSALfcJS9NLc092rIsoUqRFl22N0BHQ7NzgQFG2Bzn1byFa7xFeQIhNF03w\ndJanPNBl/vmaZS/rUJrWI99EFwJOpPbLSomo7KNFEW4JTTBI6SoCmp2LRL2MKqNGP7MOBTQ73y+L\nSGTp5nQp4IS6X+ZJL8ItoQ8IUrqOgGb5T9L0pNcolkP3As5R9A2Rbp9bCTiBFO1AHxCkICBIQUCQ\ngoAgBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEK\nAoIUBAQpCAhSEBCkICBIQUCQgoAgBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkI\nCFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQpqc8L/mBm9nw+C1YFemLmyofdD47jePgys69mNvLideH1\ndc+tIeXp4cMwfDSzL2b2bmY/D78A8CvyfTKzb+M4/tj6UJKAAKVgEAJSEBCkICBIQUCQgoAgBQFB\nCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQp\nSblhyIwAF0jKjJCanOiLmf3lUCm4H3+a2d9bb6YK+G5m9vb2Zo/Hw6FOZfn8+bN9//5dXY1b83w+\n7fX11exfd7ZIFfCnmdnj8bCXl5e8mjkyDINt5bZpqZ43Z7fLlipgUwzDoK7CYR1I+pRGOAGnA686\nwHPxtuowDIO8nlEIdRkm56B6RM15+Xt1mL/fQrRumVACHh34ktwpoh2dNPMIn4t7E5zaRO29f7a8\no9/x2lm15avdz5yXl7pfc+uQJeDWDhrH8fdZslbB6f1c1n5juRM98djhZ8pScbSNnt0L9wg4Ve5I\nQrO8A3ok37JO0fpi84NcM/Im5gx3K+9yH3DaMfMKLyt/1FG/UubaCHOtT+LdZ8s56z37TDVIravH\nvnWJgEcRxussXv7GssyjqOFVj5R+7vK9o9agFWqfKMVHwSV3+Ly5V4+Oj1BdOrpC6onugWsfsPYZ\nXvMArTXpqeXn1rOkAEtqn8huAqYMOuaUlqeGnCldj/lnS5dXgtLlZV+GWQ5ClhJG6nwfcVYiL2Fq\n7sutMkqVfVnAuWzT/9f+Pn9vosZdhaN+TC1yJKzdHK6JXroOWRFwvnNTm6L5d6ORey86yjbXrGd2\nH1C5U7fKLnH3JfVkO/quBz3dlw41GUHN4hG2p8mVsJVuhSfh5gPm4Bkx1AOSXiACVqQ3eTxAQJCC\ngCAFAUEKAoIUBAQpCAhSEBCkICBIudWdELhOqRkyCAiHlJz8QBMMu5SeeXMpAkbNNNArpeYa1pj2\ndUnA+cyOs5UrsbNK7qias4Nz8N6vteYcVu0DKhci5ezIswuueqHGtlYTsIR8tZcrtiphxNQjE+7r\ngs32Z+6WOHilhZinIWl1OWmp7kezTXDqwZhLGfEs3VpqWurAnEk111okvkL2ZZhlwqDle2Zx5Zto\n5UBvJWBS1MOr7OxlmXPWcvO1cvByOZvtocRIf21/q9KheJVZ5EL0Wuo2s5j9vzNlzre5xDLMrXrU\nioQlgkoRAXuJekuU3Ygza6BLUGrbXQVUpklbUmqHpazN9YxMtTJw7f1uya5F+MkItfpAymwIR9tX\nYpBXK5DIJiN4Z42qlY4NfAl/K662hBNrI/4SZfQufTUBcyYwpP5+aY5u/ZVISFnisy1RNQJG3Ulm\naXWPvH0qmJAKUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJASfkKqgl6efdcC3UXA\nWgvHl4/tqj0fsReqRMBSOVv2yquZLWopoSoa5j7NM4er25z9wOo7siVZ9AX4CqSPay01RX+tOWxx\n4VLK752dFZ2TWyY1gnrObO+uD7hF6SdVllpu0Frf0rsuXY6Caz1Xt1bWr7N9y5JJQKd6ee1TaQSM\neOliXuf5v/eSNHmVqUxGtKyLF903waUP2tpT1Htcfloq64VLeraWmEei0tmqlngmJ9oaSB2JGC1P\ndHcRcNlEKvLVeK4JThG9xOi7Vnq97gSsQS2hU6KdZ/9w7eQtTZaArQ4iWq3XFdai3dY1Ti8Ja+6/\nbiNgxAvPe6zde16+X7tOHmW5XAe8UpGeotSSGiPv0nkJU8m95ii9FdcDqqsAe/u9xjHxKqPLOyE1\nuPuJ50W3fUCIAQKCFAQEKQgIUhAQpCAgSEFAkIKAIIUL0UE4c8cl0kVyBAzA0dy8yA+0oQkGKV1H\nQI9ZvUdNX49RqSZdC1gD9ZoYdfm5dC3gPEvC1WiU8r1a2bKiy7ZGsT7g0c6qtTNrzo2rvQiqpQeE\nX0USAa/I1+PZf4Qiv01tsgW80rxdSe2QkjAnJXdLym9dxXvgsZZ5oQUJPZdsFomAtZJErv19a6dE\nT51Wqv611v9uEW4Qstxhy4OiXKMRWfCtupcWM2SCyq0EQUs86neXfNC1MootCTMIucIyKuWI06N0\nLdDNrbiU9BXR6WU75rik5jizSr/G7bHcz885kxQSzuMWAWtNF0q5HDOvi9coL2X7IkYodZ2zBdxK\nFbYWBT2jxNGozTPF2FHKi56j3zLfYrM5opcd/uW/57erPMpalrEs1/vM3rqvrL6OlkNucPC4QuA6\nCp4fpL2/eZY3p1ZSoF5ukc1P5G4uRK9Fp+nAld7IWhMPIke9NZTbUew64HKjejlYZn1ti5purgPe\nmcgnBAKCFAQEKQgIUhAQpCAgSEFAkBJuRvTd8F470xruEbDnG/Pgj8uquJS/bVHriUbRIsPE1qzu\ntduBEU/+ywKm7pSSRBYrld7uOy/JioC97hSox2UBke8XNSJUlDwzV+rJKDiTqOuBj+YCbp1Y3t0e\nrgOC9AQiAgYgYoRNBQEbZ6959Pp9peBFmuC1lVRRz+IW611jUFI65clEtoB72QiOHjMfhb16K7fJ\nS0TlFQ2XCNjrou2WaeXSTG7r5rIw/YiokS+VkktPa5HaSnmLL0nN0Qu598FbJWUbvLbTZRScsla2\n9oEpWd7emueWUumeZS2tyR4ed4FcU3PsvVdLwL1JEp6/f5QKOKqEZv97vEo3yV3dCfFKRnn0+0e/\nHVW8OSl5FZtNUr5GyYOyJ5535E39/VrpSErTdI7oFjg6yF6p2a78VnT5ahBeQDVIlkdoATn4/yXq\n5Z+uBiF3J+IJiYCdEFE+MwQEMQgIUlIHIR/MzJ7PZ8GqQE/MXPmw+8G1uXsrc/m+mtnIi9eF19c9\nt4bE6VQfzeyLmb2b2c/DLwD8inyfzOzbOI4/tj6UJCBAKRiEgBQEBCkICFIQEKQgIEhBQJCCgCDl\nHznD8sz5BolAAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7efc5b169b50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -201,9 +202,9 @@
     "    plt.xticks([])\n",
     "    plt.yticks([])\n",
     "    plt.show()\n",
-    "    \n",
-    "pairs, targets = loader.make_oneshot_task(100)\n",
-    "plot_oneshot_task(pairs)"
+    "#example of a one-shot learning task\n",
+    "pairs, targets = loader.make_oneshot_task(25)\n",
+    "plot_oneshot_task(pairs)\n"
    ]
   },
   {
@@ -213,33 +214,51 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating model on 60 unique 20 way one-shot learning tasks ...\n",
+      "Got an average of 43.3333333333% 20 way one-shot learning accuracy\n",
+      "iteration 0, training loss: 0.400377213955,\n",
+      "iteration 40, training loss: 0.360177010298,\n",
+      "iteration 80, training loss: 0.359253257513,\n",
+      "iteration 120, training loss: 0.352402210236,\n",
+      "iteration 160, training loss: 0.34878513217,\n",
+      "iteration 200, training loss: 0.342484951019,\n"
+     ]
+    }
+   ],
    "source": [
-    "evaluate_every = 170\n",
-    "batch_size = 60\n",
+    "evaluate_every = 250\n",
+    "loss_every=40\n",
+    "batch_size = 128\n",
     "N_way = 20\n",
-    "n_val = 40\n",
-    "for i in range(20000):\n",
+    "n_val = 60\n",
+    "siamese_net.load_weights(\"/home/soren/keras-oneshot/weights\")\n",
+    "for i in range(90000):\n",
     "    (inputs,targets)=loader.get_batch(batch_size)\n",
     "    loss=siamese_net.train_on_batch(inputs,targets)\n",
     "    if i % evaluate_every == 0:\n",
-    "        val_acc = loader.test_oneshot(siamese_net,N_way,n_val,verbose=False)\n",
-    "        print(\"iteration {}, training loss: {}, validation  one-shot learning accuracy: {}\".format(i,loss,val_acc))\n",
+    "        val_acc = loader.test_oneshot(siamese_net,N_way,n_val,verbose=True)\n",
+    "    if i % loss_every == 0:\n",
+    "        print(\"iteration {}, training loss: {},\".format(i,loss))\n",
     "\n",
-    "        \n",
-    "siamese_net.save(path='/home/soren/keras-oneshot/weights')"
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
-    "        "
+    "siamese_net.save('/home/soren/keras-oneshot/weights')\n",
+    "        \n",
+    "    "
    ]
   },
   {
