added function to plot entire alphabet

--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
+     "ename": "AttributeError",
+     "evalue": "'Sequential' object has no attribute 'get_layers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-369335688347>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0msiamese_net\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"binary_crossentropy\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0msiamese_net\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconvnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_layers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'get_layers'"
      ]
     }
    ],
@@ -55,7 +59,10 @@
     "siamese_net = Model(input=[left_input,right_input],output=prediction)\n",
     "optimizer = SGD(0.001,momentum=0.5,nesterov=True,decay=0.0003)\n",
     "#//TODO: get layerwise learning rates and momentum annealing scheme described in paperworking\n",
-    "siamese_net.compile(loss=\"binary_crossentropy\",optimizer=optimizer)"
+    "siamese_net.compile(loss=\"binary_crossentropy\",optimizer=optimizer)\n",
+    "siamese_net.count_params()\n",
+    "for i in convnet.get_layers():\n",
+    "    print(i)"
    ]
   },
   {
@@ -66,19 +73,23 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(964, 20, 105, 105)\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-400d529d1a45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"/home/soren/keras-oneshot/train.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m\"/home/soren/keras-oneshot/val.pickle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m(\u001b[0m\u001b[0mXval\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack"
      ]
     }
    ],
    "source": [
     "with open( \"/home/soren/keras-oneshot/train.pickle\",\"r\") as f:\n",
-    "    (X,y,c) = pickle.load(f)\n",
+    "    (X,y) = pickle.load(f)\n",
     "\n",
     "with open( \"/home/soren/keras-oneshot/val.pickle\",\"r\") as f:\n",
-    "    (Xval,yval,cval) = pickle.load(f)\n",
+    "    (Xval,yval) = pickle.load(f)\n",
     "print(X.shape)\n",
     "a=siamese_net.predict([X[1,1,:,:].reshape(1,105,105,1),X[7,1,:,:].reshape(1,105,105,1) ])\n",
     "b=siamese_net.predict([X[7,1,:,:].reshape(1,105,105,1),X[1,1,:,:].reshape(1,105,105,1) ])\n"
@@ -86,91 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "class Siamese_Loader:\n",
-    "    \"\"\"For loading batches and testing tasks to a siamese net\"\"\"\n",
-    "    def __init__(self,Xtrain,Xval):\n",
-    "        \n",
-    "        self.Xval = Xval# / Xval.max()\n",
-    "        self.Xtrain = Xtrain# / Xtrain.max()\n",
-    "\n",
-    "\n",
-    "        self.n_classes,self.n_examples,self.w,self.h = Xtrain.shape\n",
-    "        self.n_val,self.n_ex_val,_,_ = Xval.shape\n",
-    "\n",
-    "    def get_batch(self,n):\n",
-    "        \"\"\"Create batch of n pairs, half same class, half different class\"\"\"\n",
-    "        categories = rng.choice(self.n_classes,size=(n,),replace=False)\n",
-    "        pairs=[np.zeros((n, self.h, self.w,1)) for i in range(2)]\n",
-    "        targets=np.zeros((n,))\n",
-    "        targets[n//2:] = 1\n",
-    "        for i in range(n):\n",
-    "            category = categories[i]\n",
-    "            idx_1 = rng.randint(0,self.n_examples)\n",
-    "            pairs[0][i,:,:,:] = self.Xtrain[category,idx_1].reshape(self.w,self.h,1)\n",
-    "            idx_2 = rng.randint(0,self.n_examples)\n",
-    "            #pick images of same class for 1st half, different for 2nd\n",
-    "            category_2 = category if i >= n//2 else (category + rng.randint(1,self.n_classes)) % self.n_classes\n",
-    "            pairs[1][i,:,:,:] = self.Xtrain[category_2,idx_2].reshape(self.w,self.h,1)\n",
-    "        return pairs, targets\n",
-    "\n",
-    "    def make_oneshot_task(self,N):\n",
-    "        \"\"\"Create pairs of test image, support set for testing N way one-shot learning. \"\"\"\n",
-    "        categories = rng.choice(self.n_val,size=(N,),replace=False)\n",
-    "        indices = rng.randint(0,self.n_ex_val,size=(N,))\n",
-    "        true_category = categories[0]\n",
-    "        ex1, ex2 = rng.choice(self.n_examples,replace=False,size=(2,))\n",
-    "        test_image = np.asarray([self.Xval[true_category,ex1,:,:]]*N).reshape(N,self.w,self.h,1)\n",
-    "        support_set = self.Xval[categories,indices,:,:]\n",
-    "        support_set[0,:,:] = self.Xval[true_category,ex2]\n",
-    "        support_set = support_set.reshape(N,self.w,self.h,1)\n",
-    "        pairs = [test_image,support_set]\n",
-    "        targets = np.zeros((N,))\n",
-    "        targets[0] = 1\n",
-    "        return pairs, targets\n",
-    "    \n",
-    "    def test_oneshot(self,model,N,k,verbose=0):\n",
-    "        \"\"\"Test average N way oneshot learning accuracy of a siamese neural net over k one-shot tasks\"\"\"\n",
-    "        pass\n",
-    "        n_correct = 0\n",
-    "        if verbose:\n",
-    "            print(\"Evaluating model on {} unique {} way one-shot learning tasks ...\".format(k,N))\n",
-    "        for i in range(k):\n",
-    "            inputs, targets = self.make_oneshot_task(N)\n",
-    "            probs = model.predict(inputs)\n",
-    "            if np.argmax(probs) == 0:\n",
-    "                n_correct+=1\n",
-    "        percent_correct = (100.0*n_correct / k)\n",
-    "        if verbose:\n",
-    "            print(\"Got an average of {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
-    "        return percent_correct\n",
+    "-\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAKAAAAFKCAYAAACaZ1R9AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAADKFJREFUeJztnT2S3DgSRpMbY8jXBeSW2zqE7qDp4/XMHXQI2eX2BeTL\n4xgaarlc/oBEAh8SfC+iIqSuH4DkYwIggeQwjqMBqPiPugJwbxAQpCAgSEFAkIKAIAUBQQoCghQE\nBCl/pHxoGIaPZvbFzN7N7GfJCkE3fDCzT2b2bRzHH1sfShLQfsn3l0Ol4H78aWZ/b72ZKuC7mdnb\n25s9Hg+HOkHvPJ9Pe319NfvXnS1SBfxpZvZ4POzl5SWvZnA3drtsDEJACgKCFAQEKQgIUhAQpCAg\nSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQpCAhSEBCkICBIQUCQgoAg\nBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQUpqhtRqDMNw+bs9Pflzbz/0tJ3NCJgj3tZv9HSg\neqWJJthDvpq/q6an7WpCQLgv3Qs4DMPvV0/0sj1yAWvuyN5E7GF7mhmEbJEykDh7ECIMVuZ1Otq+\nYRia3IYU5BEQ7k2zEfDMGX0mWqwxfWccx9PfrxF5rtQrCt1FwHEcf7/OclXeGnIcbU9UQbsTcM5V\nEa9QS8Kofb0tuhYQ2ucWAtaKHOpmMOJlmWYHISVYShjtYE30NCi5lYBX2IqcWwLMR9QqIl0XvEUT\nDO2CgAds9avUl0VSyo/QTDcrYJQduEf0+tdALmCUvsoa6rqnjO5bPwnkAsK9QcBMjqJQja6EOhLn\n0LyArTchkEfzAkLfIKAT0QcDKpoQUHXwUvpOPc5AaYkmBFTieUEXUc9zewFBSzMCKi9n0MzqaEbA\niVY78yVSh0CDAirxiIJE03MgIEhpUsBWpxrRhPrTpIBmupkeLdzbvRPNCphK5EEJdCAgxKZ5AVUj\nyhJJkeD/aV5AM92ghMsp5QkhYCqqkTGR8DpdCQjxCCNg6h0G72ikKvcuhBFwovVBCU3yOcIJaJZ+\nsbhENGyRyMKHFBD6IbSALfcJS9NLc092rIsoUqRFl22N0BHQ7NzgQFG2Bzn1byFa7xFeQIhNF03w\ndJanPNBl/vmaZS/rUJrWI99EFwJOpPbLSomo7KNFEW4JTTBI6SoCmp2LRL2MKqNGP7MOBTQ73y+L\nSGTp5nQp4IS6X+ZJL8ItoQ8IUrqOgGb5T9L0pNcolkP3As5R9A2Rbp9bCTiBFO1AHxCkICBIQUCQ\ngoAgBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEK\nAoIUBAQpCAhSEBCkICBIQUCQgoAgBQFBCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkI\nCFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQpqc8L/mBm9nw+C1YFemLmyofdD47jePgys69mNvLideH1\ndc+tIeXp4cMwfDSzL2b2bmY/D78A8CvyfTKzb+M4/tj6UJKAAKVgEAJSEBCkICBIQUCQgoAgBQFB\nCgKCFAQEKQgIUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJCCgCAFAUEKAoIUBAQp\nSblhyIwAF0jKjJCanOiLmf3lUCm4H3+a2d9bb6YK+G5m9vb2Zo/Hw6FOZfn8+bN9//5dXY1b83w+\n7fX11exfd7ZIFfCnmdnj8bCXl5e8mjkyDINt5bZpqZ43Z7fLlipgUwzDoK7CYR1I+pRGOAGnA686\nwHPxtuowDIO8nlEIdRkm56B6RM15+Xt1mL/fQrRumVACHh34ktwpoh2dNPMIn4t7E5zaRO29f7a8\no9/x2lm15avdz5yXl7pfc+uQJeDWDhrH8fdZslbB6f1c1n5juRM98djhZ8pScbSNnt0L9wg4Ve5I\nQrO8A3ok37JO0fpi84NcM/Im5gx3K+9yH3DaMfMKLyt/1FG/UubaCHOtT+LdZ8s56z37TDVIravH\nvnWJgEcRxussXv7GssyjqOFVj5R+7vK9o9agFWqfKMVHwSV3+Ly5V4+Oj1BdOrpC6onugWsfsPYZ\nXvMArTXpqeXn1rOkAEtqn8huAqYMOuaUlqeGnCldj/lnS5dXgtLlZV+GWQ5ClhJG6nwfcVYiL2Fq\n7sutMkqVfVnAuWzT/9f+Pn9vosZdhaN+TC1yJKzdHK6JXroOWRFwvnNTm6L5d6ORey86yjbXrGd2\nH1C5U7fKLnH3JfVkO/quBz3dlw41GUHN4hG2p8mVsJVuhSfh5gPm4Bkx1AOSXiACVqQ3eTxAQJCC\ngCAFAUEKAoIUBAQpCAhSEBCkICBIudWdELhOqRkyCAiHlJz8QBMMu5SeeXMpAkbNNNArpeYa1pj2\ndUnA+cyOs5UrsbNK7qias4Nz8N6vteYcVu0DKhci5ezIswuueqHGtlYTsIR8tZcrtiphxNQjE+7r\ngs32Z+6WOHilhZinIWl1OWmp7kezTXDqwZhLGfEs3VpqWurAnEk111okvkL2ZZhlwqDle2Zx5Zto\n5UBvJWBS1MOr7OxlmXPWcvO1cvByOZvtocRIf21/q9KheJVZ5EL0Wuo2s5j9vzNlzre5xDLMrXrU\nioQlgkoRAXuJekuU3Ygza6BLUGrbXQVUpklbUmqHpazN9YxMtTJw7f1uya5F+MkItfpAymwIR9tX\nYpBXK5DIJiN4Z42qlY4NfAl/K662hBNrI/4SZfQufTUBcyYwpP5+aY5u/ZVISFnisy1RNQJG3Ulm\naXWPvH0qmJAKUhAQpCAgSEFAkIKAIAUBQQoCghQEBCkICFIQEKQgIEhBQJASfkKqgl6efdcC3UXA\nWgvHl4/tqj0fsReqRMBSOVv2yquZLWopoSoa5j7NM4er25z9wOo7siVZ9AX4CqSPay01RX+tOWxx\n4VLK752dFZ2TWyY1gnrObO+uD7hF6SdVllpu0Frf0rsuXY6Caz1Xt1bWr7N9y5JJQKd6ee1TaQSM\neOliXuf5v/eSNHmVqUxGtKyLF903waUP2tpT1Htcfloq64VLeraWmEei0tmqlngmJ9oaSB2JGC1P\ndHcRcNlEKvLVeK4JThG9xOi7Vnq97gSsQS2hU6KdZ/9w7eQtTZaArQ4iWq3XFdai3dY1Ti8Ja+6/\nbiNgxAvPe6zde16+X7tOHmW5XAe8UpGeotSSGiPv0nkJU8m95ii9FdcDqqsAe/u9xjHxKqPLOyE1\nuPuJ50W3fUCIAQKCFAQEKQgIUhAQpCAgSEFAkIKAIIUL0UE4c8cl0kVyBAzA0dy8yA+0oQkGKV1H\nQI9ZvUdNX49RqSZdC1gD9ZoYdfm5dC3gPEvC1WiU8r1a2bKiy7ZGsT7g0c6qtTNrzo2rvQiqpQeE\nX0USAa/I1+PZf4Qiv01tsgW80rxdSe2QkjAnJXdLym9dxXvgsZZ5oQUJPZdsFomAtZJErv19a6dE\nT51Wqv611v9uEW4Qstxhy4OiXKMRWfCtupcWM2SCyq0EQUs86neXfNC1MootCTMIucIyKuWI06N0\nLdDNrbiU9BXR6WU75rik5jizSr/G7bHcz885kxQSzuMWAWtNF0q5HDOvi9coL2X7IkYodZ2zBdxK\nFbYWBT2jxNGozTPF2FHKi56j3zLfYrM5opcd/uW/57erPMpalrEs1/vM3rqvrL6OlkNucPC4QuA6\nCp4fpL2/eZY3p1ZSoF5ukc1P5G4uRK9Fp+nAld7IWhMPIke9NZTbUew64HKjejlYZn1ti5purgPe\nmcgnBAKCFAQEKQgIUhAQpCAgSEFAkBJuRvTd8F470xruEbDnG/Pgj8uquJS/bVHriUbRIsPE1qzu\ntduBEU/+ywKm7pSSRBYrld7uOy/JioC97hSox2UBke8XNSJUlDwzV+rJKDiTqOuBj+YCbp1Y3t0e\nrgOC9AQiAgYgYoRNBQEbZ6959Pp9peBFmuC1lVRRz+IW611jUFI65clEtoB72QiOHjMfhb16K7fJ\nS0TlFQ2XCNjrou2WaeXSTG7r5rIw/YiokS+VkktPa5HaSnmLL0nN0Qu598FbJWUbvLbTZRScsla2\n9oEpWd7emueWUumeZS2tyR4ed4FcU3PsvVdLwL1JEp6/f5QKOKqEZv97vEo3yV3dCfFKRnn0+0e/\nHVW8OSl5FZtNUr5GyYOyJ5535E39/VrpSErTdI7oFjg6yF6p2a78VnT5ahBeQDVIlkdoATn4/yXq\n5Z+uBiF3J+IJiYCdEFE+MwQEMQgIUlIHIR/MzJ7PZ8GqQE/MXPmw+8G1uXsrc/m+mtnIi9eF19c9\nt4bE6VQfzeyLmb2b2c/DLwD8inyfzOzbOI4/tj6UJCBAKRiEgBQEBCkICFIQEKQgIEhBQJCCgCDl\nHznD8sz5BolAAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7efc5b169b50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loader = Siamese_Loader(X,Xval)\n",
     "\n",
@@ -214,22 +158,7 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating model on 60 unique 20 way one-shot learning tasks ...\n",
-      "Got an average of 43.3333333333% 20 way one-shot learning accuracy\n",
-      "iteration 0, training loss: 0.400377213955,\n",
-      "iteration 40, training loss: 0.360177010298,\n",
-      "iteration 80, training loss: 0.359253257513,\n",
-      "iteration 120, training loss: 0.352402210236,\n",
-      "iteration 160, training loss: 0.34878513217,\n",
-      "iteration 200, training loss: 0.342484951019,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluate_every = 250\n",
     "loss_every=40\n",
@@ -250,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
