--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -97,24 +97,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "-\n",
-    "    \n"
+    "class Siamese_Loader:\n",
+    "    \"\"\"For loading batches and testing tasks to a siamese net\"\"\"\n",
+    "    def __init__(self,Xtrain,Xval=None):\n",
+    "        if Xval is None:\n",
+    "\t\tself.Xval = Xtrain \n",
+    "\telse:\n",
+    "       \t\tself.Xval = Xval# / Xval.max()\n",
+    "        self.Xtrain = Xtrain# / Xtrain.max()\n",
+    "\n",
+    "\n",
+    "        self.n_classes,self.n_examples,self.w,self.h = Xtrain.shape\n",
+    "        self.n_val,self.n_ex_val,_,_ = self.Xval.shape\n",
+    "\n",
+    "    def get_batch(self,n):\n",
+    "        \"\"\"Create batch of n pairs, half same class, half different class\"\"\"\n",
+    "        categories = rng.choice(self.n_classes,size=(n,),replace=False)\n",
+    "        pairs=[np.zeros((n, self.h, self.w,1)) for i in range(2)]\n",
+    "        targets=np.zeros((n,))\n",
+    "        targets[n//2:] = 1\n",
+    "        for i in range(n):\n",
+    "            category = categories[i]\n",
+    "            idx_1 = rng.randint(0,self.n_examples)\n",
+    "            pairs[0][i,:,:,:] = self.Xtrain[category,idx_1].reshape(self.w,self.h,1)\n",
+    "            idx_2 = rng.randint(0,self.n_examples)\n",
+    "            #pick images of same class for 1st half, different for 2nd\n",
+    "            category_2 = category if i >= n//2 else (category + rng.randint(1,self.n_classes)) % self.n_classes\n",
+    "            pairs[1][i,:,:,:] = self.Xtrain[category_2,idx_2].reshape(self.w,self.h,1)\n",
+    "        return pairs, targets\n",
+    "\n",
+    "    def make_oneshot_task(self,N):\n",
+    "        \"\"\"Create pairs of test image, support set for testing N way one-shot learning. \"\"\"\n",
+    "        categories = rng.choice(self.n_val,size=(N,),replace=False)\n",
+    "        indices = rng.randint(0,self.n_ex_val,size=(N,))\n",
+    "        true_category = categories[0]\n",
+    "        ex1, ex2 = rng.choice(self.n_examples,replace=False,size=(2,))\n",
+    "        test_image = np.asarray([self.Xval[true_category,ex1,:,:]]*N).reshape(N,self.w,self.h,1)\n",
+    "        support_set = self.Xval[categories,indices,:,:]\n",
+    "        support_set[0,:,:] = self.Xval[true_category,ex2]\n",
+    "        support_set = support_set.reshape(N,self.w,self.h,1)\n",
+    "        pairs = [test_image,support_set]\n",
+    "        targets = np.zeros((N,))\n",
+    "        targets[0] = 1\n",
+    "        return pairs, targets\n",
+    "    \n",
+    "    def test_oneshot(self,model,N,k,verbose=0):\n",
+    "        \"\"\"Test average N way oneshot learning accuracy of a siamese neural net over k one-shot tasks\"\"\"\n",
+    "        pass\n",
+    "        n_correct = 0\n",
+    "        if verbose:\n",
+    "            print(\"Evaluating model on {} unique {} way one-shot learning tasks ...\".format(k,N))\n",
+    "        for i in range(k):\n",
+    "            inputs, targets = self.make_oneshot_task(N)\n",
+    "            probs = model.predict(inputs)\n",
+    "            if np.argmax(probs) == 0:\n",
+    "                n_correct+=1\n",
+    "        percent_correct = (100.0*n_correct / k)\n",
+    "        if verbose:\n",
+    "            print(\"Got an average of {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
+    "        return percent_correct\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-832937f169b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSiamese_Loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mXval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconcat_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"\"\"Concatenates a bnch of images into a big matrix for plotting purposes.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
    "source": [
     "loader = Siamese_Loader(X,Xval)\n",
     "\n",
