--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -283,7 +283,7 @@
     "n_iter = 900000 \n",
     "N_way = 20 # how many classes for testing one-shot tasks>\n",
     "n_val = 250 #how mahy one-shot tasks to validate on?\n",
-    "\n",
+    "best = 9999\n",
     "#siamese_net.load_weights(\"/home/soren/keras-oneshot/weights\")\n",
     "for i in range(1, n_iter):\n",
     "    (inputs,targets)=loader.get_batch(batch_size)\n",
